--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                 </div>
                 <div class="col-md-6">
                     <h3>Who I Am</h3>
-                    <p>I am a skilled professional with expertise in [your field]. My mission is to deliver top-notch solutions and help clients achieve their goals.</p>
+                    <p>I am a skilled professional with expertise in web development and mobile app development. My mission is to deliver top-notch solutions and help clients achieve their goals.</p>
                 </div>
             </div>
         </div>
@@ -69,14 +69,7 @@
                     <h4>UI/UX Design</h4>
                     <p>Designing user-friendly and visually appealing interfaces.</p>
                 </div>
-                <div class="col-md-4 text-center">
-                    <i class="bi bi-bar-chart-line fs-1 text-primary"></i>
-                    <h4>Business Solutions</h4>
-                    <p>Providing innovative solutions to optimize workflows and outcomes.</p>
-                </div>
-            </div>
-        </div>
-    </section>
+            </section>
 
     <!-- Portfolio Section -->
     <section id="portfolio" class="py-5">
@@ -88,7 +81,7 @@
                     <div class="card">
                         <img src="https://via.placeholder.com/400x300" class="card-img-top" alt="Project 1">
                         <div class="card-body">
-                            <h5 class="card-title">JavaScript Project 1</h5>
+                            <h5 class="card-title">JavaScript Simple Arithmetic Calculator App</h5>
                             <p class="card-text">A dynamic project showcasing advanced interactivity.</p>
                             <a href="https://your-netlify-link-1.netlify.app" target="_blank" class="btn btn-primary">View Project</a>
                         </div>
@@ -99,7 +92,7 @@
                     <div class="card">
                         <img src="https://via.placeholder.com/400x300" class="card-img-top" alt="Project 2">
                         <div class="card-body">
-                            <h5 class="card-title">JavaScript Project 2</h5>
+                            <h5 class="card-title">JavaScript to-do list</h5>
                             <p class="card-text">A task management tool with modern features.</p>
                             <a href="https://your-netlify-link-2.netlify.app" target="_blank" class="btn btn-primary">View Project</a>
                         </div>
@@ -110,7 +103,7 @@
                     <div class="card">
                         <img src="https://via.placeholder.com/400x300" class="card-img-top" alt="Project 3">
                         <div class="card-body">
-                            <h5 class="card-title">JavaScript Project 3</h5>
+                            <h5 class="card-title">JavaScript data visualization dashboard App</h5>
                             <p class="card-text">A real-time interactive dashboard for data visualization.</p>
                             <a href="https://your-netlify-link-3.netlify.app" target="_blank" class="btn btn-primary">View Project</a>
                         </div>
