--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <!-- Navbar -->
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <div class="container">
-            <a class="navbar-brand" href="#">Your Name</a>
+            <a class="navbar-brand" href="#">Chukwuemeka Nwaoha</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
@@ -83,7 +83,7 @@
                         <div class="card-body">
                             <h5 class="card-title">JavaScript Simple Arithmetic Calculator App</h5>
                             <p class="card-text">A dynamic project showcasing advanced interactivity.</p>
-                            <a href="https://your-netlify-link-1.netlify.app" target="_blank" class="btn btn-primary">View Project</a>
+                            <a href="https://calc.netlify.app" target="_blank" class="btn btn-primary">View Project</a>
                         </div>
                     </div>
                 </div>
@@ -94,7 +94,7 @@
                         <div class="card-body">
                             <h5 class="card-title">JavaScript to-do list</h5>
                             <p class="card-text">A task management tool with modern features.</p>
-                            <a href="https://your-netlify-link-2.netlify.app" target="_blank" class="btn btn-primary">View Project</a>
+                            <a href="https://emy-todo.netlify.app" target="_blank" class="btn btn-primary">View Project</a>
                         </div>
                     </div>
                 </div>
@@ -105,7 +105,7 @@
                         <div class="card-body">
                             <h5 class="card-title">JavaScript data visualization dashboard App</h5>
                             <p class="card-text">A real-time interactive dashboard for data visualization.</p>
-                            <a href="https://your-netlify-link-3.netlify.app" target="_blank" class="btn btn-primary">View Project</a>
+                            <a href="https://chukwuemekadata.netlify.app" target="_blank" class="btn btn-primary">View Project</a>
                         </div>
                     </div>
                 </div>
