--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+I'm<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -114,27 +114,59 @@
     </section>
 
     <!-- Contact Section -->
-    <section id="contact" class="bg-dark text-light py-5">
-        <div class="container">
-            <h2 class="text-center mb-4">Contact Me</h2>
-            <form>
-                <div class="mb-3">
-                    <label for="name" class="form-label">Name</label>
-                    <input type="text" class="form-control" id="name" required>
-                </div>
-                <div class="mb-3">
-                    <label for="email" class="form-label">Email</label>
-                    <input type="email" class="form-control" id="email" required>
-                </div>
-                <div class="mb-3">
-                    <label for="message" class="form-label">Message</label>
-                    <textarea class="form-control" id="message" rows="5" required></textarea>
-                </div>
-                <button type="submit" class="btn btn-primary">Submit</button>
-            </form>
-        </div>
-    </section>
+    
 
+            <div class="col-lg-4 mt-4">
+                <div class="card portfolioContent">
+                    <img class="card-img-top" src="quizy.png" alt="Card image" style="width:100%">
+                    <div class="card-body">
+                        <h4 class="card-title">Quiz App</h4>
+                        <p class="card-text">A JavaScript Quiz App</p>
+                        <div class="text-center">
+                            <a href="https://quizzical-chukwuemeka.netlify.app" class="btn btn-success">Link</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col-lg-4 mt-4">
+                <div class="card portfolioContent">
+                    <img class="card-img-top" src="calculus.png" alt="Card image" style="width:100%">
+                    <div class="card-body">
+                        <h4 class="card-title">Calculator App</h4>
+                        <p class="card-text">Calculator Application built with vanilla JavaScript</p>
+                        <div class="text-center">
+                            <a href="calc501.netlify.app" class="btn btn-success">Link</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <br>
+        <div class="row">
+            <div class="col-lg-4 mt-4">
+                <div class="card portfolioContent">
+                    <img class="card-img-top" src="xchange.png" alt="Card image" style="width:100%">
+                    <div class="card-body">
+                        <h4 class="card-title">Real-time Currency Exchage App</h4>
+                        <p class="card-text">Real-time Currency Exchange Rates App built on vanilla JavaScript.</p>
+                        <div class="text-center">
+                            <a href="emy-exchange.netlify.app" class="btn btn-success">Link</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col-lg-4 mt-4">
+                <div class="card portfolioContent">
+                    <img class="card-img-top" src="todot.png" alt="Card image" style="width:100%">
+                    <div class="card-body">
+                        <h4 class="card-title">Todo List App</h4>
+                        <p class="card-text">HTML, CSS and JavaScript To-do List App</p>
+                        <div class="text-center">
+                            <a href="https://my-todo-list.netlify.app/" class="btn btn-success">Link</a>
+                        </div>
+    </div>
     <!-- Footer -->
     <footer class="bg-dark text-light text-center py-3">
         <p>&copy; 2024 Your Name. All Rights Reserved.</p>
