--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     </section>
 
     <!-- About Section -->
-    <section id="about" class="py-5">
+    <section id="about to" class="py-5">
         <div class="container">
             <h2 class="text-center mb-4">About Me</h2>
             <div class="row">
@@ -76,72 +76,7 @@
         <div class="container">
             <h2 class="text-center mb-4">Portfolio</h2>
             <div class="row">
-                <!-- Project 1 -->
-                <div class="col-md-4 mb-4">
-                    <div class="card">
-                        <img src="https://via.placeholder.com/400x300" class="card-img-top" alt="Project 1">
-                        <div class="card-body">
-                            <h5 class="card-title">JavaScript Simple Arithmetic Calculator App</h5>
-                            <p class="card-text">A dynamic project showcasing advanced interactivity.</p>
-                            <a href="https://calc.netlify.app" target="_blank" class="btn btn-primary">View Project</a>
-                        </div>
-                    </div>
-                </div>
-                <!-- Project 2 -->
-                <div class="col-md-4 mb-4">
-                    <div class="card">
-                        <img src="https://via.placeholder.com/400x300" class="card-img-top" alt="Project 2">
-                        <div class="card-body">
-                            <h5 class="card-title">JavaScript to-do list</h5>
-                            <p class="card-text">A task management tool with modern features.</p>
-                            <a href="https://emy-todo.netlify.app" target="_blank" class="btn btn-primary">View Project</a>
-                        </div>
-                    </div>
-                </div>
-                <!-- Project 3 -->
-                <div class="col-md-4 mb-4">
-                    <div class="card">
-                        <img src="https://via.placeholder.com/400x300" class="card-img-top" alt="Project 3">
-                        <div class="card-body">
-                            <h5 class="card-title">JavaScript data visualization dashboard App</h5>
-                            <p class="card-text">A real-time interactive dashboard for data visualization.</p>
-                            <a href="https://chukwuemekadata.netlify.app" target="_blank" class="btn btn-primary">View Project</a>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </section>
-
-    <!-- Contact Section -->
-    
-
-            <div class="col-lg-4 mt-4">
-                <div class="card portfolioContent">
-                    <img class="card-img-top" src="quizy.png" alt="Card image" style="width:100%">
-                    <div class="card-body">
-                        <h4 class="card-title">Quiz App</h4>
-                        <p class="card-text">A JavaScript Quiz App</p>
-                        <div class="text-center">
-                            <a href="https://quizzical-chukwuemeka.netlify.app" class="btn btn-success">Link</a>
-                        </div>
-                    </div>
-                </div>
-            </div>
-
-            <div class="col-lg-4 mt-4">
-                <div class="card portfolioContent">
-                    <img class="card-img-top" src="calculus.png" alt="Card image" style="width:100%">
-                    <div class="card-body">
-                        <h4 class="card-title">Calculator App</h4>
-                        <p class="card-text">Calculator Application built with vanilla JavaScript</p>
-                        <div class="text-center">
-                            <a href="calc501.netlify.app" class="btn btn-success">Link</a>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
+                
         <br>
         <div class="row">
             <div class="col-lg-4 mt-4">
