--- a/index.html
+++ b/index.html
@@ -81,10 +81,23 @@
         <div class="row">
             <div class="col-lg-4 mt-4">
                 <div class="card portfolioContent">
-                    <img class="card-img-top" src="xchange.png" alt="Card image" style="width:100%">
+                    <img class="card-img-top" src="https://www.google.com/imgres?imgurl=https%3A%2F%2Fm.media-amazon.com%2Fimages%2FI%2F510WmeXkLXL.png&tbnid=I9z_whP2Pgjw4M&vet=1&imgrefurl=https%3A%2F%2Fwww.nilos.com%2F%3Fn%3D219517315&docid=hZr9I7kbgq1CDM&w=512&h=512&itg=1&source=sh%2Fx%2Fim%2Fm1%2F2&kgs=a156fdf05ec3d5ac&shem=abme%2Ctrie" alt="Card image" style="width:100%">
                     <div class="card-body">
                         <h4 class="card-title">Real-time Currency Exchage App</h4>
                         <p class="card-text">Real-time Currency Exchange Rates App built on vanilla JavaScript.</p>
+                        <div class="text-center">
+                            <a href="emy-exchange.netlify.app" class="btn btn-success">Link</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="row">
+            <div class="col-lg-4 mt-4">
+                <div class="card portfolioContent">
+                    <img class="card-img-top" src="https://images.app.goo.gl/HUik7WqyJH9LHMc36" alt="Card image" style="width:100%">
+                    <div class="card-body">
+                        <h4 class="card-title">Real-time data visualization App</h4>
+                        <p class="card-text">Data Visualization  App built on vanilla JavaScript.</p>
                         <div class="text-center">
                             <a href="emy-exchange.netlify.app" class="btn btn-success">Link</a>
                         </div>
